# jetson-player

./: .gitignore  README.md
jplayer-client/: CMakeLists.txt  Main.qml  main.cpp  networkmanager.cpp  networkmanager.h  playerreceiver.cpp  playerreceiver.h  playersender.cpp  playersender.h  playerworker.cpp  playerworker.h  resource.qrc  resources.qrc  runner.cpp  runner.h
jplayer-client/resource/shaders/: button_direction.vert
